--- a/Software/WebInterface/templates/upload.html
+++ b/Software/WebInterface/templates/upload.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portabraille Portal</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<section class="hero is-primary">
-        <div class="hero-body">
+<section class="title">
+        {% comment %} <div class="hero-body">
             <div class="container">
-                <h1 class="title">
+                <h1 class="title"> {% endcomment %}
                     Portabraille Portal
-                </h1>
+                {% comment %} </h1>
             </div>
-        </div>
+        </div> {% endcomment %}
 </section>
 
 <title>Python Flask File Upload Example</title>
