whatever maia didn't push

--- a/Software/WebInterface/templates/upload.html
+++ b/Software/WebInterface/templates/upload.html
@@ -13,14 +13,14 @@
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    Portabraille Portal
+                    Portabraille Printer Portal
                 </h1>
             </div>
         </div>
 </section>
 
 <title>Python Flask File Upload Example</title>
-<h2>Select a file to upload</h2>
+<h2>Portabraille Printer Portal</h2>
 <p>
 	{% with messages = get_flashed_messages() %}
 	  {% if messages %}
