Fix comment error - MK

--- a/Software/WebInterface/templates/upload.html
+++ b/Software/WebInterface/templates/upload.html
@@ -11,13 +11,13 @@
 </head>
 
 <section class="title">
-        {% comment %} <div class="hero-body">
+        <div class="hero-body">
             <div class="container">
-                <h1 class="title"> {% endcomment %}
+                <h1 class="title">
                     Portabraille Portal
-                {% comment %} </h1>
+                </h1>
             </div>
-        </div> {% endcomment %}
+        </div>
 </section>
 
 <title>Python Flask File Upload Example</title>
