do you prefer this

--- a/Software/WebInterface/templates/upload.html
+++ b/Software/WebInterface/templates/upload.html
@@ -1,7 +1,7 @@
 
 <!doctype html>
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="test.css" />
+<link href="https://raw.githubusercontent.com/maiam6242/braille-printer/master/Software/WebInterface/templates/test.css" rel="stylesheet"/>
 <html lang="en">
 
 <head>
@@ -15,7 +15,7 @@
         <div class="hero-body">
             <div id="upload" class="container">
                 <div class="header blue1"></div>
-                <img class="g-Img" alt="" src="PageGraphics\Logo.png"/>
+                <img class="g-Img" alt="" src="https://raw.githubusercontent.com/maiam6242/braille-printer/master/Software/WebInterface/templates/PageGraphics/Logo.png"/>
                 <h1 class="title" style="margin-top:-60px;" align="center">
                     Portabraille Printer Portal
                 </h1>
