--- a/Software/WebInterface/templates/style.css
+++ b/Software/WebInterface/templates/style.css
@@ -1,181 +1,135 @@
-@font-face {
-    font-family: 'Source Sans Pro';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v13/6xK3dSBYKcSV-LCoeQqfX1RYOo3qNa7lqDY.woff2) format('woff2');
-    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-  }
-.container {
-    margin: 0 auto;
-    position: relative;
-  }
-
-@media screen and (min-width: 1024px) {
-    .container {
-      max-width: 960px;
-      width: 960px;
-    }
-    .container.is-fluid {
-      margin-left: 32px;
-      margin-right: 32px;
-      max-width: none;
-      width: auto;
-    }
+.g-Img {
+  position:absolute;
+  top:20px;
+  left:50%;
+  margin-left:-50px;
+  margin-right: auto;
+  width: 100px;
 }
-
-#g-homepage-box ,
-#g-homepage-box .g-artboard {
-    margin:0 auto;
+.title{
+  font-family:'Source Sans Pro',sans-serif;
+	font-size:40px;
 }
-#g-homepage-box p {
-    margin:0;
+p{
+  font-family:'Source Sans Pro',sans-serif;
+  font-size:27px;
+  line-height:5px;
 }
-#g-homepage-box .g-aiAbs {
-    position:absolute;
+.semibold{
+  font-weight:600;
 }
-#g-homepage-box .g-aiImg {
-    position:absolute;
-    top:0;
-    display:block;
-    width:100% !important;
+.button {
+  border: none;
+  color: #000000;
+  width:300px;
+  height:60px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 30px;
 }
-#g-homepage-box .g-aiSymbol {
-    position: absolute;
-    box-sizing: border-box;
+.button:hover{
+    background-color: #c8e1fa;
 }
-#g-homepage-box .g-aiPointText p { white-space: nowrap; }
-#g-homepage {
-    position:relative;
-    overflow:hidden;
+.header{
+	width:100%;
+	height:180px;
+	top:0;
 }
-#g-homepage .g-Img {
-    position:absolute;
-    top:20px;
-    left:20px;
-    display:block;
-    width:12.5%;
+.circle675{
+  height: 675px;
+  width: 675px;
+  background-color: #bbb;
+  border-radius: 50%;
+  border-radius: 50%;
+  position:absolute;
 }
-#g-homepage p {
-    font-family:'Source Sans Pro',sans-serif;
-    line-height:43px;
-    filter:alpha(opacity=100);
-    -ms-filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    opacity:1;
-    letter-spacing:0em;
-    font-size:33px;
-    text-align:left;
-    color:rgb(0,0,0);
-    text-transform:none;
-    padding-bottom:0;
-    padding-top:0;
-    mix-blend-mode:normal;
-    font-style:normal;
-    height:auto;
-    position:static;
+.circle400{
+  height: 400px;
+  width: 400px;
+  background-color: #bbb;
+  border-radius: 50%;
+  border-radius: 50%;
+  position:absolute;
 }
-#g-homepage a {
-    font-family:'Source Sans Pro',sans-serif;
-    line-height:43px;
-    filter:alpha(opacity=100);
-    -ms-filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    opacity:1;
-    letter-spacing:0em;
-    font-size:33px;
-    text-align:left;
-    color:rgb(0,0,0);
-    text-transform:none;
-    padding-bottom:0;
-    padding-top:0;
-    mix-blend-mode:normal;
-    font-style:normal;
-    height:auto;
-    position:static;
+.circle225{
+  height: 225px;
+  width: 225px;
+  background-color: #bbb;
+  border-radius: 50%;
+  border-radius: 50%;
+  position:absolute;
 }
-#g-homepage .g-pstyle0 {
-    font-weight:600;
-    line-height:32px;
-    height:32px;
-    font-size:27px;
+.circle300{
+  height: 300px;
+  width: 300px;
+  background-color: #bbb;
+  border-radius: 50%;
+  border-radius: 50%;
+  position:absolute;
 }
-#g-homepage .g-pstyle1 {
-    font-weight:600;
-    text-align:center;
+.circle350{
+  height: 300px;
+  width: 300px;
+  background-color: #bbb;
+  border-radius: 50%;
+  border-radius: 50%;
+  position:absolute;
 }
-#g-homepage .g-pstyle2 {
-    font-weight:600;
+.circle250{
+  height: 250px;
+  width: 250px;
+  background-color: #bbb;
+  border-radius: 50%;
+  border-radius: 50%;
+  position:absolute;
 }
-#g-homepage .g-pstyle3 {
-    font-weight:600;
-    text-align:right;
+.circle150{
+  height: 150px;
+  width: 150px;
+  background-color: #bbb;
+  border-radius: 50%;
+  border-radius: 50%;
+  position:absolute;
 }
-#g-homepage .g-pstyle4 {
-    text-align:right;
+.uploadbox{
+  width:600px;
+	height:460px;
+	background-color:#ffffff;
+  border: 4px solid #000000;
+  position:absolute;
+  top:360px;
+  left:50%;
+  margin-left:-300px;
 }
-#g-homepage .g-pstyle5 {
-    font-weight:600;
-    line-height:40px;
-    text-align:center;
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
 }
-#g-homepage .g-cstyle0 {
-    font-weight:bold;
+.inputfile + label {
+  background-color: #91c2f2;
+  text-align: center;
+  font-size: 30px;
+  display:inline-block;
+  padding-top:30px;
+  padding-bottom:30px;
+  padding-left:65px;
+  padding-right:65px;
 }
-
-#g-homepage .header{
-    width:100%;
-    height:180px;
-    top:0;
+.inputfile:focus + label,
+.inputfile + label:hover {
+    background-color: #c8e1fa;
 }
-
-#g-homepage .footer{
-    width:100%;
-    height:80px;
-    top:0;
+.blue1{
+	background:	#91c2f2;
 }
-.header {
-    font-family: 'Source Sans Pro';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v13/6xK3dSBYKcSV-LCoeQqfX1RYOo3qNa7lqDY.woff2) format('woff2');
-    font-size: large;
-    color: black;
-    background-color: #91c2f2;
-    background-size: 10%;
-    text-align: center;
-    background-position: top;
+.blue2{
+  background:	#c8e1fa;
 }
-.btn {
-    background: #91c2f2;
-    border: 2px;
-    /* TODO: Put in the right font */
-    font-family: Arial;
-    font-size: 27px;  
-    padding: 19px;  
-    color: black;
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-    
-}
-.btn:hover {
-    background: #c2daf2;
-    text-decoration: none;
-}
-h2 {
-    font-family: 'Source Sans Pro';
-    font-style: normal;
-    font-weight: 500;
-    src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v13/6xK3dSBYKcSV-LCoeQqfX1RYOo3qNa7lqDY.woff2) format('woff2');
-    font-size: medium;
-    color: black;
-    text-align: center;
-    align-content: center;
-}
-text {
-    font-family: 'Source Sans Pro';
-    font-style: normal;
-    font-weight: 200;
-    src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v13/6xK3dSBYKcSV-LCoeQqfX1RYOo3qNa7lqDY.woff2) format('woff2');
-    font-size: small;
-    color: black;
+.blue3{
+  background: #e3f0fc;
 }
