--- a/oldwebsite.css
+++ b/oldwebsite.css
@@ -1,10 +1,13 @@
-.aiAbs {
+#homepage-box p {
+  margin:0;
+}
+#homepage-box .aiAbs {
   position:absolute;
 }
-.aiPointText p {
+#homepage-box .aiPointText p {
   white-space: nowrap;
 }
-#homepage, #team, #resources, #process, #instructions {
+#homepage {
   position:relative;
   overflow:hidden;
 }
@@ -14,8 +17,7 @@
   left:20px;
   width: 12.5%;
 }
-p {
-  margin:0;
+#homepage p {
   font-family:'Source Sans Pro',sans-serif;
   line-height:43px;
   filter:alpha(opacity=100);
@@ -33,7 +35,7 @@ p {
   height:auto;
   position:static;
 }
-a {
+#homepage a {
   font-family:'Source Sans Pro',sans-serif;
   line-height:43px;
   filter:alpha(opacity=100);
@@ -50,12 +52,6 @@ a {
   font-style:normal;
   height:auto;
   position:static;
-}
-.tabs{
-  font-weight:600;
-  line-height:32px;
-  height:32px;
-  font-size:27px;
 }
 #homepage .pstyle0 {
   font-weight:600;
@@ -85,78 +81,14 @@ a {
 #homepage .cstyle0 {
   font-weight:bold;
 }
-#team .pstyle0 {
-  font-weight:600;
-  line-height:43px;
-  font-size:33px;
-}
-#team .pstyle1 {
-  line-height:43px;
-  font-size:33px;
-}
-#team .pstyle2 {
-  text-align:justify;
-}
-#team .pstyle3 {
-  font-weight:600;
-  line-height:40px;
-  font-size:33px;
-  text-align:center;
-}
-#team .pstyle4 {
-  line-height:40px;
-  font-size:33px;
-  text-align:center;
-}
-#team .cstyle0 {
-  font-weight:bold;
-}
-#resources .pstyle0 {
-  font-weight:600;
-  line-height:43px;
-  font-size:33px;
-  text-align:center;
-}
-#resources .pstyle1 {
-  line-height:43px;
-  font-size:33px;
-  text-align:center;
-}
-#resources .pstyle2 {
-  font-weight:600;
-  line-height:58px;
-  font-size:48px;
-}
-#process .pstyle0 {
-  font-weight:600;
-}
-#instructions .pstyle0 {
-  font-weight:600;
-  text-align:center;
-}
-#instructions .pstyle1 {
-  font-weight:600;
-}
-#instructions .pstyle2 {
-  font-weight:600;
-  text-align:justify;
-}
-#instructions .pstyle3 {
-  text-align:justify;
-}
-#instructions .pstyle4 {
-  font-weight:600;
-  text-align:right;
-}
-#instructions .pstyle5 {
-  text-align:right;
-}
-.header{
+
+#homepage .header{
   width:100%;
   height:180px;
   top:0;
 }
-.footer{
+
+#homepage .footer{
   width:100%;
   height:80px;
   top:0;
