--- a/website.css
+++ b/website.css
@@ -12,7 +12,7 @@
   position:absolute;
   top:20px;
   left:20px;
-  width: 12.5%;
+  width: 160px;
 }
 p {
   margin:0;
@@ -201,9 +201,25 @@ a {
   border-radius: 50%;
   position:absolute;
 }
+.circle450{
+  height: 450px;
+  width: 450px;
+  background-color: #bbb;
+  border-radius: 50%;
+  border-radius: 50%;
+  position:absolute;
+}
 .circle225{
   height: 225px;
   width: 225px;
+  background-color: #bbb;
+  border-radius: 50%;
+  border-radius: 50%;
+  position:absolute;
+}
+.circle175{
+  height: 175px;
+  width: 175px;
   background-color: #bbb;
   border-radius: 50%;
   border-radius: 50%;
@@ -240,6 +256,35 @@ a {
   border-radius: 50%;
   border-radius: 50%;
   position:absolute;
+}
+.dotdotdot{
+  position:absolute;
+}
+.dot{
+  float:left;
+  height:20px;
+  width:20px;
+  background-color:#000000;
+  border-radius:50%;
+  position:inline-block;
+}
+.frame {
+  border: 4px solid #000000;
+  background-color: #ffffff00;
+  position:absolute;
+}
+.btn{
+  height:70px;
+  width:220px;
+  background-color: #91c2f2;
+  position:inline;
+  font-weight:600;
+  text-align: center;
+  line-height: 65px;
+  float:left;
+}
+.btn:hover{
+  background-color: #c8e1fa;
 }
 .blue1{
 	background:	#91c2f2;
