fixing upload page formatting issues

--- a/Software/WebInterface/templates/upload.html
+++ b/Software/WebInterface/templates/upload.html
@@ -20,6 +20,9 @@ p{
   line-height:5px;
 }
 .semibold{
+  font-family:'Source Sans Pro',sans-serif;
+  font-size:27px;
+  line-height:5px;
   font-weight:600;
 }
 .button {
@@ -56,14 +59,6 @@ p{
   border-radius: 50%;
   position:absolute;
 }
-.circle225{
-  height: 225px;
-  width: 225px;
-  background-color: #bbb;
-  border-radius: 50%;
-  border-radius: 50%;
-  position:absolute;
-}
 .circle300{
   height: 300px;
   width: 300px;
@@ -83,14 +78,6 @@ p{
 .circle250{
   height: 250px;
   width: 250px;
-  background-color: #bbb;
-  border-radius: 50%;
-  border-radius: 50%;
-  position:absolute;
-}
-.circle150{
-  height: 150px;
-  width: 150px;
   background-color: #bbb;
   border-radius: 50%;
   border-radius: 50%;
@@ -159,12 +146,15 @@ p{
         </div>
 </section>
 
-<div class="circle350 blue3" style="top:395px;left:-50px"></div>
-<div class="circle300 blue2" style="top:470px;left:990px"></div>
-<div class="circle675 blue2" style="top:270px;left:150px"></div>
-<div class="circle300 blue1" style="top:580px;left:740px"></div>
-<div class="circle400 blue3" style="top:270px;left:670px"></div>
-<div class="circle250 blue1" style="top:570px;left:-10px"></div>
+<div style="top:-10px;position:absolute;left:50%;margin-left:-630px">
+  <div class="circle350 blue3" style="top:395px;left:-50px"></div>
+  <div class="circle300 blue2" style="top:470px;left:990px"></div>
+  <div class="circle675 blue2" style="top:270px;left:150px"></div>
+  <div class="circle300 blue1" style="top:580px;left:740px"></div>
+  <div class="circle400 blue3" style="top:270px;left:670px"></div>
+  <div class="circle250 blue1" style="top:570px;left:-10px"></div>
+</div>
+<div style="position:absolute;top:950px;padding-bottom:10px">&nbsp</div>
 
 <div id="upload" class="uploadbox" align="center">
   <br>
