fixing some formatting issues

--- a/website.css
+++ b/website.css
@@ -163,7 +163,7 @@ a {
 }
 #instructions .pstyle2 {
   font-weight:600;
-  text-align:justify;
+  text-align: center;
 }
 #instructions .pstyle3 {
   text-align:justify;
