--- a/website.css
+++ b/website.css
@@ -14,6 +14,10 @@
   left:20px;
   width: 160px;
 }
+.portrait {
+  position:absolute;
+  width:250px;
+}
 p {
   margin:0;
   font-family:'Source Sans Pro',sans-serif;
