finishing instructions page

--- a/website.css
+++ b/website.css
@@ -167,7 +167,7 @@ a {
 }
 #instructions .pstyle2 {
   font-weight:600;
-  text-align: center;
+  text-align:justify;
 }
 #instructions .pstyle3 {
   text-align:justify;
