--- a/website.css
+++ b/website.css
@@ -26,7 +26,7 @@ p {
   -ms-filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity:1;
   letter-spacing:0em;
-  font-size:3vw;
+  font-size:33px;
   text-align:left;
   color:rgb(0,0,0);
   text-transform:none;
